kubernetes/apps/opslab-api/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opslab-api
  namespace: opslab
  labels:
    app.kubernetes.io/name: opslab-api
    app.kubernetes.io/instance: opslab
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: opslab-k8s
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: opslab-api
    app.kubernetes.io/instance: opslab
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
